Adjust wavy line and fix flickering on Chrome

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -154,7 +154,7 @@ a {
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23f0efef;stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
   background-repeat: repeat-x;
-  background-position: 2px 1.3em;
+  background-position: 1px 1.3em;
   // background-position: 2px 1.6em; // use this amount for .underline when not on a span
   background-size: 13px 7px;
 
@@ -163,7 +163,7 @@ a {
 
 // Use this to create underlines that are closer to the baseline
 .underline-close {
-  background-position: 2px 1.1em;
+  background-position: 1px 1.1em;
 
   .underline-mask {
     background-position: 100% 1.1em;
@@ -196,26 +196,26 @@ a {
 .underline-mask {
   text-decoration: none;
   padding-bottom: 1em;
+  // height: 1em;
 
   color: inherit; // allows span/link's text to inherit color
 
   background-image: linear-gradient($background-color, $background-color);
-  background-repeat: repeat-x;
   background-repeat: no-repeat;
-  background-position: 100% 1.2em;
+  background-position: 110% 1.2em; /* 110% fixes flickering at certain browser widths on Chrome */
   background-size: 100% 100%;
 
   z-index: 1;
 }
 
 .short-animation {
-  transition: background-size 0.3s ease;
+  transition: background-size 0.4s ease;
 }
 .med-animation {
-  transition: background-size 0.6s ease;
+  transition: background-size 0.7s ease;
 }
 .long-animation {
-  transition: background-size 1s ease;
+  transition: background-size 1.2s ease;
 }
 
 .screenreader-text {
@@ -239,14 +239,14 @@ footer {
 }
 
 a:focus .underline-perm {
-  background-position: 2px 1.5em;
+  background-position: 1px 1.5em;
 }
 
 .underline-perm {
   &:hover,
   &:active,
   &:focus {
-    background-position: 2px 1.5em;
+    background-position: 1px 1.5em;
   }
 }
 
